persp2equir to pers2equi

--- a/Equirectangular Transforms.ipynb
+++ b/Equirectangular Transforms.ipynb
@@ -54,7 +54,7 @@
      "text": [
       "Loading image from path: Images/SamplePerspectiveImage.jpg\n",
       "Using GPU acceleration...\n",
-      "persp2equir_gpu completed in 0.44 seconds.\n"
+      "pers2equi_gpu completed in 0.44 seconds.\n"
      ]
     },
     {
@@ -90,7 +90,7 @@
     "start_time = time.time()\n",
     "\n",
     "# Run optimized conversion (will use multiple CPU cores or GPU if available)\n",
-    "optimized_result = equiforge.persp2equir(\n",
+    "optimized_result = equiforge.pers2equi(\n",
     "    'Images/SamplePerspectiveImage.jpg',\n",
     "    output_height=4096,\n",
     "    fov_h=90.0,\n",
