Enhance equirectangular image processing: - Expand Python version support in CI workflow. - Update parameter names from fov_h to fov_x in conversion functions for consistency. - Improve README with detailed installation instructions and acknowledgements. - Remove obsolete requirements files. - Refactor tests to align with updated parameter names.

--- a/Equirectangular Transforms.ipynb
+++ b/Equirectangular Transforms.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f488e73d",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
     "optimized_result = pers2equi(\n",
     "    'Images/SamplePerspectiveImage.jpg',\n",
     "    output_height=4096,\n",
-    "    fov_h=90.0,\n",
+    "    fov_x=90.0,\n",
     "    yaw=0.0,\n",
     "    pitch=0.0,\n",
     "    roll=0.0\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2cc762a3",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
     "    equi_image,\n",
     "    output_width=1920,\n",
     "    output_height=1080,\n",
-    "    fov_h=90.0,\n",
+    "    fov_x=90.0,\n",
     "    yaw=0.0,    # Look 45° to the right\n",
     "    pitch=0.0,  # Look 15° up\n",
     "    roll=0.0\n",
